--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
         <link rel="stylesheet" href="css/leaflet.photon.css">
         <style>
+		.control-box {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: white;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+  z-index: 999;
+}
         html, body, #map {
             width: 100%;
             height: 100%;
@@ -23,6 +33,20 @@
     </head>
     <body>
         <div id="map">
+		<div id="controls" class="control-box">
+  <label>OV bereikbaarheid:
+    <input type="range" min="0" max="1" step="0.1" id="weight-ov" value="0.25">
+  </label><br>
+  <label>Fitnessafstand:
+    <input type="range" min="0" max="1" step="0.1" id="weight-fitness" value="0.25">
+  </label><br>
+  <label>Bevolking:
+    <input type="range" min="0" max="1" step="0.1" id="weight-pop" value="0.25">
+  </label><br>
+  <label>Gebouwen (>150m²):
+    <input type="range" min="0" max="1" step="0.1" id="weight-buildings" value="0.25">
+  </label><br>
+  <button onclick="updateMCA()">Update MCA-score</button>
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
