--- a/index.html
+++ b/index.html
@@ -5,38 +5,30 @@
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
   <link rel="stylesheet" href="css/leaflet.css" />
   <style>
-    html, body {
+    html, body, #map {
+      width: 100%;
       height: 100%;
       margin: 0; padding: 0;
       font-family: sans-serif;
     }
-    #dashboard-frame {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      border: 2px solid #333;
-      box-sizing: border-box;
-    }
     #title {
-      background-color: #2a9d8f;
-      color: white;
-      padding: 12px 20px;
-      font-size: 22px;
-      font-weight: 700;
-      user-select: none;
-    }
-    #main-content {
-      flex: 1;
-      display: flex;
-      position: relative;
-    }
-    #map {
-      flex: 1;
-      height: 100%;
-    }
-    .control-box {
       position: absolute;
       top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 18px;
+      font-weight: bold;
+      z-index: 1100;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    }
+    #map { position: absolute; top: 0; bottom: 0; right: 0; left: 0; }
+
+    .control-box {
+      position: absolute;
+      top: 60px;
       left: 10px;
       background: rgba(255,255,255,0.9);
       padding: 10px;
@@ -44,96 +36,104 @@
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
       z-index: 1000;
       font-size: 14px;
-      width: 180px;
+      max-width: 200px;
     }
+    .control-box label {
+      display: block;
+      margin-bottom: 6px;
+    }
+
     #legend {
       position: absolute;
-      top: 10px;
+      top: 60px;
       right: 10px;
-      width: 150px;
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.9);
+      padding: 10px 15px;
       border-radius: 8px;
-      padding: 15px 12px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
-      font-size: 13px;
-      color: #333;
+      font-size: 14px;
       z-index: 1000;
-      user-select: none;
+      width: 180px;
     }
-    #legend h4 {
-      margin-top: 0;
+    #legend .title {
+      font-weight: bold;
       margin-bottom: 8px;
-      font-weight: 700;
-      font-size: 16px;
+      text-align: center;
     }
-    #legend .color-bar {
+    #legend .colorbar {
       height: 20px;
+      background: linear-gradient(to right,
+        #d7191c 0%,  /* rood */
+        #fdae61 33%, /* oranje */
+        #a6d96a 66%, /* lichtgroen */
+        #1a9641 100% /* donkergroen */
+      );
       border-radius: 5px;
-      background: linear-gradient(to right, 
-        #d7191c 0%, 
-        #fdae61 33%, 
-        #a6d96a 66%, 
-        #1a9641 100%);
-      margin-bottom: 8px;
+      margin-bottom: 5px;
     }
     #legend .labels {
       display: flex;
       justify-content: space-between;
-      font-weight: 600;
+      font-size: 12px;
+      font-family: monospace;
     }
+
   </style>
   <title>Fitness MCA Dashboard</title>
 </head>
 <body>
-  <div id="dashboard-frame">
-    <div id="title">Fitness MCA Dashboard</div>
-    <div id="main-content">
-      <div id="map"></div>
 
-      <div class="control-box">
-        <label>OV (score_bus):
-          <input type="range" min="0" max="1" step="0.1" id="weight-ov" value="0.33">
-        </label>
-        <label>Fitness (score_fit):
-          <input type="range" min="0" max="1" step="0.1" id="weight-fitness" value="0.33">
-        </label>
-        <label>Bevolking (score_pop):
-          <input type="range" min="0" max="1" step="0.1" id="weight-pop" value="0.33">
-        </label>
-        <button onclick="updateScores()">Update MCA-score</button>
-      </div>
+  <div id="title">Fitness MCA Dashboard</div>
 
-      <div id="legend">
-        <h4>MCA-score legenda</h4>
-        <div class="color-bar"></div>
-        <div class="labels">
-          <span>1</span><span>3.5</span><span>6.5</span><span>10</span>
-        </div>
-      </div>
+  <div id="map"></div>
+
+  <div class="control-box">
+    <label>OV (score_bus):
+      <input type="range" min="0" max="1" step="0.1" id="weight-ov" value="0.33" />
+    </label>
+    <label>Fitness (score_fit):
+      <input type="range" min="0" max="1" step="0.1" id="weight-fitness" value="0.33" />
+    </label>
+    <label>Bevolking (score_pop):
+      <input type="range" min="0" max="1" step="0.1" id="weight-pop" value="0.33" />
+    </label>
+    <button onclick="updateScores()">Update MCA-score</button>
+  </div>
+
+  <div id="legend">
+    <div class="title">Legenda MCA-score</div>
+    <div class="colorbar"></div>
+    <div class="labels">
+      <span>0</span><span>2</span><span>4</span><span>6</span><span>10</span>
     </div>
   </div>
 
   <script src="js/leaflet.js"></script>
-  <script src="data/gridlayer_mca_fitness_1.js"></script>
   <script>
     // Kaart initialisatie
     var map = L.map('map', { zoomControl: false }).setView([52.09, 5.12], 12);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OSM contributors'
     }).addTo(map);
-    L.control.scale({ position: 'bottomright' }).addTo(map);
+
+    L.control.zoom({ position: 'topright' }).addTo(map);
+
+    L.control.scale({ position: 'bottomright', imperial: false }).addTo(map);
 
     // Hover highlight
     function highlightFeature(e) {
       var layer = e.target;
-      layer.setStyle({ weight: 2, color: '#666' });
+      layer.setStyle({ weight: 3, color: '#666' });
+      if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+        layer.bringToFront();
+      }
     }
     function resetHighlight(e) {
       layer_group.resetStyle(e.target);
     }
     function popFeature(feature, layer) {
       layer.on({ mouseover: highlightFeature, mouseout: resetHighlight });
-      layer.bindPopup('MCA_score: ' + (feature.properties.MCA_score || '').toFixed(2));
+      layer.bindPopup('MCA_score: ' + (feature.properties.MCA_score || 0).toFixed(2));
     }
 
     // Kleurenschaal
@@ -152,14 +152,24 @@
       };
     }
 
-    // GeoJSON-layer
-    var layer_group = L.geoJson(json_gridlayer_mca_fitness, {
-      style: styleFeature,
-      onEachFeature: popFeature
-    }).addTo(map);
+    var layer_group; // globale variabele
+
+    // GeoJSON via fetch inladen
+    fetch('data/gridlayer_mca_fitness.geojson')
+      .then(res => res.json())
+      .then(data => {
+        layer_group = L.geoJson(data, {
+          style: styleFeature,
+          onEachFeature: popFeature
+        }).addTo(map);
+        updateScores(); // scores initialiseren na laden data
+      })
+      .catch(e => console.error('GeoJSON load error:', e));
 
     // Recalculatie functie
     function updateScores() {
+      if (!layer_group) return; // als data nog niet geladen is, niet doen
+
       var w_ov = parseFloat(document.getElementById('weight-ov').value) || 0;
       var w_fit = parseFloat(document.getElementById('weight-fitness').value) || 0;
       var w_pop = parseFloat(document.getElementById('weight-pop').value) || 0;
@@ -176,11 +186,11 @@
       });
     }
 
-    // Event listeners en initiële aanroep
+    // Event listeners voor sliders
     ['weight-ov','weight-fitness','weight-pop'].forEach(id =>
       document.getElementById(id).addEventListener('input', updateScores)
-    ); 
-    updateScores();
+    );
+
   </script>
 </body>
 </html>
