Update index.html - titel weer zichtbaar?

--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
       margin: 0;
       padding: 0;
     }
-    .control-box {
+    h1.page-title {
       position: absolute;
       top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: sans-serif;
+      background: rgba(255,255,255,0.95);
+      padding: 8px 16px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+      font-size: 18px;
+      z-index: 1100;
+    }
+    .control-box {
+      position: absolute;
+      top: 60px;
       left: 10px;
       background: rgba(255,255,255,0.95);
       padding: 12px;
@@ -57,20 +70,20 @@
       position: relative;
       background-color: #666;
       color: white;
-      font-size: 13px;
-      font-weight: bold;
-      width: 20px;
-      height: 20px;
+      font-size: 11px;
+      width: 18px;
+      height: 18px;
       border-radius: 50%;
       text-align: center;
-      line-height: 20px;
+      line-height: 18px;
       cursor: pointer;
       user-select: none;
+      flex-shrink: 0;
     }
     .tooltip {
       display: none;
       position: absolute;
-      top: -60px;
+      top: -65px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0,0,0,0.85);
@@ -79,8 +92,8 @@
       border-radius: 4px;
       font-size: 11px;
       max-width: 200px;
-      white-space: normal;
       text-align: center;
+      white-space: normal;
       z-index: 1200;
     }
     .tooltip.visible {
@@ -97,6 +110,7 @@
       border-radius: 8px;
       box-shadow: 0 0 4px rgba(0,0,0,0.3);
       line-height: 18px;
+      z-index: 1000;
     }
     .legend-title {
       font-weight: bold;
@@ -116,6 +130,7 @@
   </style>
 </head>
 <body>
+  <h1 class="page-title">Optimale locatie voor fitnesscentra binnen de Gemeente Utrecht</h1>
   <div id="map"></div>
 
   <div class="control-box">
@@ -148,7 +163,7 @@
 
   <script src="js/leaflet.js"></script>
   <script>
-    var map = L.map('map', { zoomControl: true }).setView([52.09, 5.12], 12);
+    var map = L.map('map').setView([52.09, 5.12], 12);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OSM contributors'
     }).addTo(map);
@@ -158,9 +173,11 @@
       var layer = e.target;
       layer.setStyle({ weight: 2, color: '#666' });
     }
+
     function resetHighlight(e) {
       layer_group.resetStyle(e.target);
     }
+
     function popFeature(feature, layer) {
       layer.on({ mouseover: highlightFeature, mouseout: resetHighlight });
       var score = (feature.properties.MCA_score || 0).toFixed(2);
@@ -173,6 +190,7 @@
              score > 2 ? '#fdae61' :
                          '#d7191c';
     }
+
     function styleFeature(feature) {
       return {
         fillColor: getColor(feature.properties.MCA_score || 0),
