--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum‑scale=1,width=device-width">
+  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
   <link rel="stylesheet" href="css/leaflet.css">
   <style>
     html, body, #map {
@@ -18,92 +18,91 @@
       transform: translateX(-50%);
       background: rgba(255,255,255,0.95);
       padding: 10px 20px;
-      border-radius: 10px;
+      border-radius: 8px;
       font-family: sans-serif;
       font-size: 20px;
       font-weight: bold;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-      z-index: 1000;
-    }
-    .logo-box {
-      position: absolute;
-      top: 60px;
-      left: 10px;
-      z-index: 1000;
-    }
-    .logo-box img {
-      width: 100px;
-      opacity: 0.85;
+      z-index: 1001;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .control-box {
       position: absolute;
-      top: 170px;
+      top: 80px;
       left: 10px;
       background: rgba(255,255,255,0.95);
-      padding: 15px;
+      padding: 12px;
       border-radius: 8px;
       box-shadow: 0 0 5px rgba(0,0,0,0.3);
       z-index: 1000;
       font-family: sans-serif;
       font-size: 14px;
-      width: 220px;
+      max-width: 250px;
     }
     .control-box label {
       display: block;
       margin-bottom: 8px;
     }
-    .info-icon {
-      float: right;
-      cursor: pointer;
-      background: #000;
-      color: #fff;
-      border-radius: 50%;
-      width: 16px;
-      height: 16px;
-      text-align: center;
-      font-size: 10px;
-      line-height: 16px;
-      margin-left: 8px;
-      position: relative;
-    }
-    .info-text {
-      display: none;
+    #logo {
       position: absolute;
-      top: 25px;
-      right: 0;
-      width: 200px;
-      background: #333;
-      color: #fff;
-      font-size: 11px;
-      padding: 8px;
-      border-radius: 5px;
-      z-index: 1001;
+      top: 10px;
+      left: 10px;
+      z-index: 1002;
     }
-    .info-icon:hover .info-text {
-      display: block;
+    #logo img {
+      height: 45px;
+      opacity: 0.9;
+    }
+    #info-icon {
+      background: #333;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      font-size: 12px;
+      cursor: pointer;
+      margin-left: 8px;
+    }
+    #info-box {
+      display: none;
+      background: #333;
+      color: white;
+      padding: 8px;
+      font-size: 12px;
+      border-radius: 5px;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      max-width: 220px;
+      z-index: 1003;
     }
     .legend {
       position: absolute;
-      bottom: 30px;
+      bottom: 20px;
       left: 10px;
-      background: rgba(255,255,255,0.95);
+      background: white;
       padding: 10px;
-      font-size: 12px;
       font-family: sans-serif;
-      line-height: 18px;
-      border-radius: 6px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.3);
+      font-size: 13px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
       z-index: 1000;
     }
-    .legend .title {
+    .legend-title {
       font-weight: bold;
-      margin-bottom: 5px;
+      margin-bottom: 4px;
     }
-    .legend .scale {
+    .legend-scale {
       display: flex;
-      height: 10px;
+      height: 12px;
       margin-top: 5px;
-      background: linear-gradient(to right, #d7191c, #fdae61, #a6d96a, #1a9641);
+    }
+    .legend-scale div {
+      flex: 1;
+    }
+    .leaflet-control-zoom {
+      right: 10px !important;
+      left: auto !important;
     }
   </style>
   <title>Optimale locatie voor fitnesscentra binnen de Gemeente Utrecht</title>
@@ -111,13 +110,11 @@
 <body>
   <div id="map"></div>
 
-  <div class="title-box">
-    Optimale locatie voor fitnesscentra binnen de Gemeente Utrecht
+  <div id="logo">
+    <img src="data/NewLogo21.png" alt="Logo">
   </div>
 
-  <div class="logo-box">
-    <img src="fitness-locator-map/NewLogo21.png" alt="Logo">
-  </div>
+  <div class="title-box">Optimale locatie voor fitnesscentra binnen de Gemeente Utrecht</div>
 
   <div class="control-box">
     <label>OV bereikbaarheid:
@@ -129,27 +126,33 @@
     <label>Bevolkingsdichtheid:
       <input type="range" min="0" max="1" step="0.1" id="weight-pop" value="0.33">
     </label>
-    <button onclick="updateScores()">
-      Update suitability index
-      <span class="info-icon">i
-        <span class="info-text">
-          De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.
-        </span>
-      </span>
-    </button>
+    <button onclick="updateScores()">Update suitability index</button>
+    <button id="info-icon">i</button>
   </div>
 
+  <div id="info-box">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
+
   <div class="legend">
-    <div class="title">Suitability index</div>
-    <div class="scale"></div>
-    <div>Laag (1) — Hoog (10)</div>
+    <div class="legend-title">Suitability index</div>
+    <div class="legend-scale">
+      <div style="background:#d7191c"></div>
+      <div style="background:#fdae61"></div>
+      <div style="background:#a6d96a"></div>
+      <div style="background:#1a9641"></div>
+    </div>
+    <div style="display: flex; justify-content: space-between;">
+      <span>0</span><span>10</span>
+    </div>
   </div>
 
   <script src="js/leaflet.js"></script>
   <script>
-    var map = L.map('map', { zoomControl: false }).setView([52.09, 5.12], 12);
-    L.control.zoom({ position: 'topright' }).addTo(map);
-    L.control.scale({ position: 'bottomright' }).addTo(map);
+    var map = L.map('map', { zoomControl: true }).setView([52.09, 5.12], 12);
+
+    // Voeg de OpenStreetMap tile layer toe (cruciaal!)
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
 
     function highlightFeature(e) {
       var layer = e.target;
@@ -160,11 +163,11 @@
     }
     function popFeature(feature, layer) {
       layer.on({ mouseover: highlightFeature, mouseout: resetHighlight });
-      layer.bindPopup('Suitability index: ' + (feature.properties.MCA_score || '').toFixed(2));
+      layer.bindPopup('Suitability index: ' + (feature.properties.MCA_score || 0).toFixed(2));
     }
 
     function getColor(score) {
-      return score > 6 ? '#1a9641' :
+      return score > 7 ? '#1a9641' :
              score > 4 ? '#a6d96a' :
              score > 2 ? '#fdae61' :
                          '#d7191c';
@@ -178,7 +181,7 @@
       };
     }
 
-    var layer_group;
+    let layer_group;
 
     fetch('data/gridlayer_mca_fitness.geojson')
       .then(res => res.json())
@@ -188,7 +191,8 @@
           onEachFeature: popFeature
         }).addTo(map);
         updateScores();
-      });
+      })
+      .catch(err => console.error('Fout bij laden GeoJSON:', err));
 
     function updateScores() {
       var w_ov = parseFloat(document.getElementById('weight-ov').value) || 0;
@@ -210,6 +214,12 @@
     ['weight-ov','weight-fitness','weight-pop'].forEach(id =>
       document.getElementById(id).addEventListener('input', updateScores)
     );
+
+    // Info button klik
+    document.getElementById('info-icon').addEventListener('click', () => {
+      const box = document.getElementById('info-box');
+      box.style.display = box.style.display === 'block' ? 'none' : 'block';
+    });
   </script>
 </body>
 </html>
